# Catalyst

./: .env.sample  .env.sample.migration  .gitignore  CATALYST_MIGRATION.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  FETCH_REAL_TIME_PROOF.md  SURGE_POC.md  _typos.toml  deny.toml
.github/workflows/: e2e_pytest.yml  e2e_pytest_nethermind.yml  e2e_stack_pytest.yml  node_docker_build.yml  p2p_node_docker_build copy.yml  p2p_node_docker_build.yml  pytest_docker_build.yml_old  rust_dependency_audit.yml  tools_spammer_docker_build.yml
common/: Cargo.toml
common/src/: lib.rs
common/src/batch_builder/: config.rs  core.rs  mod.rs
common/src/blob/: blob_parser.rs  mod.rs
common/src/chain_monitor/: batch_proposed_receiver.rs  mod.rs
common/src/config/: config_trait.rs  mod.rs
common/src/crypto/: mod.rs
common/src/ethereum_l1/: execution_layer.rs  forced_inclusion_info.rs  mod.rs  propose_batch_builder.rs  slot_clock.rs
common/src/execution_layer/: mod.rs
common/src/fork_info/: config.rs  fork.rs  mod.rs
common/src/funds_controller/: config.rs  mod.rs
common/src/funds_monitor/: mod.rs
common/src/l1/: bindings.rs  blob_indexer.rs  config.rs  consensus_layer.rs  el_trait.rs  ethereum_l1.rs  execution_layer.rs  execution_layer_inner.rs  extension.rs  fees_per_gas.rs  mod.rs  monitor_transaction.rs  propose_batch_builder.rs  slot_clock.rs  tools.rs  (+1 more)
data/user_op_status/: db  snap.00000000000001F0
docs/: permissionless-design-doc.md
e2e_tests/: .env.example  .env.example copy 2.shasta  .env.example.shasta  .env1  .env2  .gitignore  chain_info.py  conftest.py  forced_inclusion_store.py  pytest.ini  requirements.txt  taiko_inbox.py  test_avs_node.py  test_first_preconfirmation.py  test_forced_inclusion.py  test_preocnfirmation_after_restart.py  utils.py
e2e_tests/bindings/: inbox.json
node/: Cargo.toml
node/src/: main.rs  test_gas.rs
node/src/test_gas_params/: mod.rs
pacaya/: Cargo.toml
pacaya/src/: lib.rs
pacaya/src/chain_monitor/: batch_proposed_receiver.rs  mod.rs  whitelist_monitor.rs
pacaya/src/forced_inclusion/: mod.rs
pacaya/src/funds_controller/: config.rs  mod.rs
pacaya/src/funds_monitor/: mod.rs
pacaya/src/l1/: bindings.rs  config.rs  execution_layer.rs  mod.rs  operators_cache.rs  preconf_operator_trait.rs  propose_batch_builder.rs  protocol_config.rs  traits.rs
pacaya/src/l1/abi/: PreconfWhitelist.json
pacaya/src/l1/operators_cache/: error.rs  mod.rs  state.rs
pacaya/src/l2/: config.rs  execution_layer.rs  mod.rs  taiko.rs
pacaya/src/node/: config.rs  mod.rs  operator.rs  verifier.rs
pacaya/src/node/batch_manager/: batch.rs  batch_builder.rs  config.rs  mod.rs
pacaya/src/node/operator/: mod.rs  status.rs  tests.rs
pacaya/src/utils/: config.rs
permissionless/: Cargo.toml  README.md
permissionless/bindings/: Cargo.toml
permissionless/bindings/src/: lib.rs
permissionless/node/src/node/: config.rs
permissionless/registration-cli/: Cargo.toml
permissionless/registration-cli/src/: main.rs
permissionless/registration-monitor/: Cargo.toml
permissionless/registration-monitor/src/: config.rs  db.rs  main.rs  registry_monitor.rs
permissionless/src/: lib.rs  main.rs
permissionless/src/l1/: bindings.rs  config.rs  execution_layer.rs  mod.rs
permissionless/src/l1/abi/: ILookaheadStore.json
permissionless/src/l2/: mod.rs  preconfirmation_driver.rs
permissionless/src/node/: block_advancer.rs  config.rs  mod.rs  node.rs  proposal_manager.rs
permissionless/src/node/lookahead/: lookahead_builder.rs  mod.rs  types.rs
permissionless/src/node/operator/: mod.rs  status.rs
permissionless/src/registration/: registry.rs
permissionless/src/utils/: config.rs
realtime/: Cargo.toml
realtime/src/: lib.rs
shasta/: Cargo.toml
shasta/src/: derivation_consts.rs  lib.rs
shasta/src/chain_monitor/: mod.rs
shasta/src/config/: mod.rs
shasta/src/event_indexer/: mod.rs
shasta/src/forced_inclusion/: mod.rs
shasta/src/l1/: bindings.rs  config.rs  event_indexer.rs  execution_layer.rs  mod.rs  proposal.rs  proposal_tx_builder.rs  protocol_config.rs
shasta/src/l1/abi/: Multicall.json  SurgeInbox.json  UserOpsSubmitter.json
shasta/src/l1/bindings/: inbox.rs  lib_manifest.rs  mod.rs  preconf_whitelist.rs
shasta/src/l2/: bindings.rs  execution_layer.rs  mod.rs  taiko.rs  tools.rs
shasta/src/l2/abi/: Anchor.json  BondManager.json  Bridge.json
shasta/src/node/: block_advancer.rs  config.rs  l2_head_provider.rs  l2_height_from_l1.rs  l2_slot_context.rs  l2_slot_info_v2.rs  mod.rs  status_router.rs  verifier.rs
shasta/src/node/last_safe_l2_block_finder/: binary_search_last_block.rs  mod.rs
shasta/src/node/proposal_manager/: batch_builder.rs  block_advancer.rs  bond_instruction_data.rs  bridge_handler.rs  config.rs  l2_block_payload.rs  mod.rs  proposal.rs  proposal_builder.rs  proposal_queue.rs
shasta/src/shared_abi/: Bridge.json  bindings.rs
shasta/src/utils/: config.rs  mod.rs  proposal.rs
tools/p2p_boot_node/: Dockerfile  README.md
tools/p2p_node/: Dockerfile
tools/tx_spammer/: tx_spammer.py
urc/: .env.sample  Cargo.toml  Dockerfile
urc/src/: lib.rs
urc/src/bindings/: mod.rs
urc/src/bindings/abi/: Registry.json
urc/src/cli/: commands.rs  main.rs  mod.rs
urc/src/monitor/: config.rs  db.rs  main.rs  mod.rs  registry_monitor.rs
whitelist/: Cargo.toml
whitelist/src/: main.rs  test_gas.rs
whitelist/src/chain_monitor/: batch_proposed_receiver.rs  mod.rs
whitelist/src/event_indexer/: mod.rs
whitelist/src/forced_inclusion/: mod.rs
whitelist/src/l1/: bindings.rs  execution_layer.rs  mod.rs  propose_batch_builder.rs
whitelist/src/l1/abi/: PreconfRouter.json
whitelist/src/l1/pacaya/: bindings.rs  config.rs  execution_layer.rs  mod.rs
whitelist/src/l1/shasta/: bindings.rs  mod.rs  proposal.rs  proposal_builder.rs
whitelist/src/node/: config.rs  mod.rs  node.rs  operator.rs  verifier.rs
whitelist/src/node/batch_manager/: add_l2_block_error.rs  batch_builder.rs  config.rs  mod.rs
whitelist/src/test_gas/: mod.rs
whitelist/src/utils/: config.rs  fork.rs  mod.rs
(+79 files in other folders)
