[package]
name = "node"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "catalyst_node"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
common = { workspace = true }
permissionless = { workspace = true }
realtime = { workspace = true }
rustls = { workspace = true }
shasta = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
