[package]
name = "pacaya"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[features]
default = ["get_status_duration"]
test = []
get_status_duration = []

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
common = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }

[lints]
workspace = true
