[package]
name = "permissionless"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "catalyst_permissionless"
path = "src/main.rs"

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
blst = { workspace = true }
common = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
urc = { workspace = true }

[lints]
workspace = true
