[package]
name = "shasta"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
alloy = { workspace = true }
alloy-json-rpc = { workspace = true }
anyhow = { workspace = true }
common = { workspace = true }
hex = { workspace = true }
pacaya = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
taiko_alethia_reth = { workspace = true }
taiko_bindings = { workspace = true }
taiko_protocol = { workspace = true }
taiko_rpc = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
rand = { workspace = true, features = ["std", "thread_rng"] }
tokio = { workspace = true, features = ["full", "test-util"] }

[lints]
workspace = true
