[package]
name = "registration-monitor"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "registration-monitor"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
alloy = { workspace = true }
alloy-json-rpc = { workspace = true }
alloy-rlp = { workspace = true }
anyhow = { workspace = true }
bindings = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }

[lints]
workspace = true